--- a/styles/main.css
+++ b/styles/main.css
@@ -1,1 +1,10 @@
 /* CURRENTLY IN: styles/main.css */
+body {
+	background-image:			url(../pics/background1.jpg);
+	background-size:			cover;
+	background-repeat: 			no-repeat;
+}
+
+.jumbotron {
+	background-color:			rgba(102, 187, 190, 0.8);
+}
