--- a/styles/main.css
+++ b/styles/main.css
@@ -6,5 +6,17 @@ body {
 }
 
 .jumbotron {
-	background-color:			rgba(102, 187, 190, 0.8);
+	background-color:			rgba(194, 231, 195, 0.8);
 }
+
+.btn-primary {
+	margin:						20px auto;
+	margin-right:				;
+}
+
+.formcontrol {
+	width:						80%;
+	margin:						auto;
+}
+
+
