--- a/styles/main.css
+++ b/styles/main.css
@@ -9,13 +9,18 @@ body {
 	background-color:			rgba(194, 231, 195, 0.8);
 	width:						60%;
 	margin:						auto;
+	margin-top:					20px;
 
 }
 
 .btn {
 	margin:						20px auto;
-	width:						30%;
+	width:						15%;
 }
+
+.two{
+	width:						7%;
+	}
 
 .bikeInput {
 	width:						40%;
@@ -24,7 +29,7 @@ body {
 
 .result {
 	height:						100px;
-	width:						60%;
+	width:						55%;
 	margin:						auto;
 	background-color:			rgba(194, 231, 195, 0.8);
 }
@@ -34,6 +39,7 @@ body {
 	background-color:			rgba(194, 231, 195, 0.8);
 	width:						80%;
 	margin:						auto;
+	margin-top:					10px;
 
 }
 
@@ -41,6 +47,10 @@ body {
 	margin:						20px auto;
 	width:						40%;
 }
+
+.two{
+	width:						15%;
+	}
 
 .bikeInput {
 	width:						80%;
