--- a/styles/main.css
+++ b/styles/main.css
@@ -13,6 +13,12 @@ body {
 
 }
 
+#go {
+	color:						white;
+	height:						100px;
+	width:						100px;
+}
+
 .btn {
 	margin:						20px auto;
 	width:						15%;
