--- a/styles/main.css
+++ b/styles/main.css
@@ -13,11 +13,11 @@ body {
 
 }
 
-#go {
+/*#go {
 	color:						white;
 	height:						100px;
 	width:						100px;
-}
+}*/
 
 .btn {
 	margin:						20px auto;
