--- a/styles/main.css
+++ b/styles/main.css
@@ -11,7 +11,8 @@ body {
 	margin:						auto;
 	margin-top:					20px;
 	padding:					20px;
-	height:						120px;
+	height:						100%px;
+	overflow:					none;
 
 }
 
