remove background for now

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,6 @@
 /* CURRENTLY IN: styles/main.css */
 body {
-	background-image:			url(../pics/background1.jpg);
+	/*background-image:			url(../pics/background1.jpg);*/
 	background-size:			cover;
 	background-repeat: 			no-repeat;
 }
