--- a/styles/main.css
+++ b/styles/main.css
@@ -5,9 +5,9 @@ body {
 	background-repeat: 			no-repeat;
 }
 
-.hide {
+/*.hide {
 	display:					none;
-}
+}*/
 
 .title {
 	background-color:			rgba(194, 231, 195, 0.8);
