--- a/styles/main.css
+++ b/styles/main.css
@@ -5,6 +5,11 @@ body {
 	background-repeat: 			no-repeat;
 }
 
+iframe {
+	width:						100%;
+	height:						100%;" frameBorder="0" hspace="0" vspace="0" marginHeight = "0" marginWidth = "0" scrolling= "no" allowtransparency="true"
+}
+
 .hide {
 	display:					none;
 }
