--- a/styles/main.css
+++ b/styles/main.css
@@ -7,10 +7,14 @@ body {
 
 iframe {
 	width:						100%;
-	height:						100%; 
+	height:						70px; 
 }
 .hide {
 	display:					none;
+}
+
+.form-group {
+	display:					inline;
 }
 
 .title {
@@ -52,6 +56,13 @@ iframe {
 
 }
 
+@media (max-width: 1000px) {
+	.btn {
+		width:					40%;
+	}
+}
+
+
 @media (max-width: 480px) {
  .jumbotron {
 	background-color:			rgba(194, 231, 195, 0.8);
@@ -63,7 +74,7 @@ iframe {
 
 .btn {
 	margin:						20px auto;
-	width:						40%;
+	width:						60%;
 }
 
 .two{
