--- a/styles/main.css
+++ b/styles/main.css
@@ -1,13 +1,14 @@
 /* CURRENTLY IN: styles/main.css */
 body {
-	/*background-image:			url(../pics/background1.jpg);*/
+	background-image:			url(../pics/background1.jpg);
 	background-size:			cover;
 	background-repeat: 			no-repeat;
 }
 
 iframe {
 	width:						100%;
-	height:						70px; 
+	height:						70px;
+	background-color:			transparent; 			
 }
 .hide {
 	display:					none;
@@ -60,17 +61,23 @@ iframe {
 	.btn {
 		width:					40%;
 	}
+
+	body {
+	background-image:			url(../pics/background1.jpg);
+	background-size:			cover;
+	background-repeat: 			no-repeat;
+}
 }
 
 
 @media (max-width: 480px) {
- .jumbotron {
+ /*.jumbotron {
 	background-color:			rgba(194, 231, 195, 0.8);
 	width:						80%;
 	margin:						auto;
 	margin-top:					10px;
 
-}
+}*/
 
 .btn {
 	margin:						20px auto;
