--- a/styles/main.css
+++ b/styles/main.css
@@ -10,6 +10,10 @@ iframe {
 	height:						70px;
 	background-color:			transparent; 			
 }
+
+#resultArea {
+	margin:						10px;
+}
 .hide {
 	display:					none;
 }
