--- a/styles/main.css
+++ b/styles/main.css
@@ -8,7 +8,7 @@ body {
 iframe {
 	width:						100%;
 	height:						70px;
-	background-color:			transparent; 			
+	background-color:			none transparent; 			
 }
 
 #resultArea {
