--- a/styles/main.css
+++ b/styles/main.css
@@ -5,10 +5,19 @@ body {
 	background-repeat: 			no-repeat;
 }
 
-iframe {
+#sFind {
+	float:						right;
+
+}
+
+.form-control {
+	float:						left;
+}
+
+#frame {
 	width:						100%;
 	height:						70px;
-	background-color:			none transparent; 			
+	background-color:			blue; 			
 }
 
 #resultArea {
@@ -21,7 +30,12 @@ iframe {
 }
 
 .form-group {
-	display:					inline;
+
+}
+
+.alert {
+	width:						20%;
+	margin:						auto;
 }
 
 .title {
@@ -53,6 +67,7 @@ iframe {
 .bikeInput {
 	width:						35%;
 	margin:						auto;
+	position:					relative;
 }
 
 #resultArea {
