--- a/styles/main.css
+++ b/styles/main.css
@@ -46,6 +46,7 @@ body {
 	padding:					20px;
 	height:						100%px;
 	overflow:					none;
+	border-radius:				2px;
 
 }
 
@@ -74,6 +75,7 @@ body {
 	height:						150px;
 	width:						55%;
 	margin:						auto;
+	border-radius:				2px;
 	background-color:			rgba(194, 231, 195, 0.8);
 
 }
