--- a/styles/main.css
+++ b/styles/main.css
@@ -8,7 +8,8 @@ body {
 .words {
 	display:					none;
 	background-color:			white;
-	margin:						50px;
+	margin:						auto;
+	padding:					20px;
 	position:					absolute;
 
 }
