--- a/styles/main.css
+++ b/styles/main.css
@@ -8,7 +8,7 @@ body {
 .words {
 	display:					none;
 	background-color:			white;
-	margin-left:				100px;
+	margin-left:				40%;
 	padding:					20px;
 	position:					absolute;
 
