--- a/styles/main.css
+++ b/styles/main.css
@@ -6,7 +6,10 @@ body {
 }
 
 .words {
-	transition: 				display 0.5s ease;
+	-webkit-transition: all ease-in 1s;
+	-moz-transition: all ease-in 1s;
+    -o-transition: all ease-in 1s;
+    transition: all ease-in 1s;
 	display:					none;
 	background-color:			white;
 	margin-left:				40%;
