--- a/styles/main.css
+++ b/styles/main.css
@@ -124,12 +124,12 @@ body {
 	margin:						auto;
 }
 
-.result {
+/*.result {
 	height:						100px;
 	width:						80%;
 	margin:						auto;
 	background-color:			rgba(194, 231, 195, 0.8);
 	padding:					20px;
-}
+}*/
 }
 
