--- a/styles/main.css
+++ b/styles/main.css
@@ -121,12 +121,8 @@ body {
 	margin:						auto;
 }
 
-/*.result {
-	height:						100px;
-	width:						80%;
-	margin:						auto;
-	background-color:			rgba(194, 231, 195, 0.8);
-	padding:					20px;
-}*/
+#resultArea {
+	font-size: 					75%;
+
 }
 
