--- a/styles/main.css
+++ b/styles/main.css
@@ -75,6 +75,10 @@ body {
 
 .number {
 	color:						blue;
+	width:						20px;
+	width:						20px;
+	background-color:			white;
+	border-radius:				50%;
 }
 
 #resultArea {
