--- a/styles/main.css
+++ b/styles/main.css
@@ -76,7 +76,7 @@ body {
 .number {
 	color:						blue;
 	width:						20px;
-	width:						20px;
+	height:						20px;
 	background-color:			white;
 	border-radius:				50%;
 }
