--- a/styles/main.css
+++ b/styles/main.css
@@ -76,7 +76,7 @@ body {
 .number {
 	color:						blue;
 	background-color:			white;
-	margin:						10px;
+	padding:						10px;
 	border-radius:				50%;
 }
 
