--- a/styles/main.css
+++ b/styles/main.css
@@ -85,6 +85,7 @@ body {
 	height:						170px;
 	width:						35%;
 	margin:						auto;
+	margin-bottom:				20px;
 	border-radius:				2px;
 	background-color:			rgba(194, 231, 195, 0.8);
 	font-size: 					110%;
