--- a/styles/main.css
+++ b/styles/main.css
@@ -17,14 +17,12 @@ body {
 	position:					absolute;
 }
 
-
-
 #frame {
 	width:						100%;
 	height:						70px;			
 }
 
-.hide, .sAt, #eAt, .words {
+.hide, #sAt, #eAt, .words {
 	display:					none;
 }
 
