--- a/styles/main.css
+++ b/styles/main.css
@@ -3,6 +3,7 @@ body {
 	background-image:			url(../pics/background1.jpg);
 	background-size:			cover;
 	background-repeat: 			no-repeat;
+
 }
 
 .show {
@@ -12,7 +13,11 @@ body {
     transition: all ease-in 1s;*/
 	display:					block;
 	background-color:			white;
-	margin-left:				40%;
+	border-radius:				2px;
+	margin:						auto;
+	width:						40%;
+	margin-left:				30%;
+	z-index: 					100;
 	padding:					20px;
 	position:					absolute;
 }
@@ -28,7 +33,6 @@ body {
 
 .showS {
 	display:					block;
-	color:						blue;
 }
 
 .form-group {
